--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link href="assets/css/style.css" rel="stylesheet" type="text/css" />
     <link href="assets/css/media-queries.css" rel="stylesheet" type="text/css" />
+    <link href="assets/css/ReactToastify.css" rel="stylesheet" type="text/css" />
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700|Roboto" rel="stylesheet">
     <link href="https://unpkg.com/ionicons@4.2.2/dist/css/ionicons.min.css" rel="stylesheet">
     <title>React App</title>
