--- a/public/index.html
+++ b/public/index.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#000000">
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
-    <link href="assets/css/style.css" rel="stylesheet" type="text/css" />
-    <link href="assets/css/media-queries.css" rel="stylesheet" type="text/css" />
-    <link href="assets/css/ReactToastify.css" rel="stylesheet" type="text/css" />
+    <link href="/assets/css/style.css" rel="stylesheet" type="text/css" />
+    <link href="/assets/css/media-queries.css" rel="stylesheet" type="text/css" />
+    <link href="/assets/css/ReactToastify.css" rel="stylesheet" type="text/css" />
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700|Roboto" rel="stylesheet">
     <link href="https://unpkg.com/ionicons@4.2.2/dist/css/ionicons.min.css" rel="stylesheet">
     <title>React App</title>
