Latest update - completed full authentication with network dictator

--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,9 @@
     <link href="/assets/css/ReactToastify.css" rel="stylesheet" type="text/css" />
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700|Roboto" rel="stylesheet">
     <link href="https://unpkg.com/ionicons@4.2.2/dist/css/ionicons.min.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome-animation/0.2.1/font-awesome-animation.min.css" 
+    rel="stylesheet">
     <title>React App</title>
   </head>
   <body>
